--- a/reset.css
+++ b/reset.css
@@ -45,3 +45,14 @@ table {
 	border-collapse: collapse;
 	border-spacing: 0;
 }
+
+/* Prevent overscrolling */
+/* https://stackoverflow.com/a/17899813 */
+html {
+    overflow: hidden;
+    height: 100%;
+}
+body {
+    height: 100%;
+    overflow: auto;
+}
